Fixed interactive auth added exchange tags